# ApplicationServer

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  ApplicationServer.pro  CMakeLists.txt  Config.cmake.in  LICENSE.md  Package.cmake  README.md  cpLibs.bat
ApplicationServer/: ApplicationServer.pro  CMakeLists.txt  application.cpp  application.h  consoleinput.cpp  main.cpp
ApplicationServerCore/: ApplicationServerCore_global.h  CMakeLists.txt
ApplicationServerCore/include/: ApplicationServerCore  CMakeLists.txt  application.h  consoleinput.h
ApplicationServerCore/src/: CMakeLists.txt  Plugin.cpp  Plugin.h  application.cpp  consoleinput.cpp
ApplicationServerInterface/: ApplicationServerInterface_export.h  CMakeLists.txt
ApplicationServerInterface/include/: ApplicationServerInterface  ApplicationServerInterface.h  ApplicationServerPluginInterface.h  AuthProviderInterface.h  CMakeLists.txt  CommandInterface.h  WebInterface.h
ApplicationServerInterface/src/: ApplicationServerInterface.cpp  ApplicationServerPluginInterface.cpp  AuthProviderInterface.cpp  CMakeLists.txt  CommandInterface.cpp  WebInterface.cpp
ApplicationServerTest/: ApplicationServerTest.pro  CMakeLists.txt  messagelogger.h  tst_findsplugins.cpp
