cmake_minimum_required(VERSION 3.5)

project(ApplicationServerProject)
enable_testing()
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_subdirectory(ApplicationServerCore)
add_subdirectory(ApplicationServerInterface)
add_subdirectory(ApplicationServer)
add_subdirectory(ApplicationServerListCommands)
add_subdirectory(ApplicationServerODataPlugin)
add_subdirectory(ApplicationServerTest)